tests/baselines/reference/conditionalExpressionNewLine9.errors.txt
tests/cases/compiler/conditionalExpressionNewLine9.ts(1,9): error TS2304: Cannot find name 'a'.
tests/cases/compiler/conditionalExpressionNewLine9.ts(2,5): error TS2304: Cannot find name 'b'.
tests/cases/compiler/conditionalExpressionNewLine9.ts(3,7): error TS2304: Cannot find name 'd'.
tests/cases/compiler/conditionalExpressionNewLine9.ts(3,11): error TS2304: Cannot find name 'e'.
tests/cases/compiler/conditionalExpressionNewLine9.ts(4,5): error TS2304: Cannot find name 'c'.
tests/cases/compiler/conditionalExpressionNewLine9.ts(5,7): error TS2304: Cannot find name 'f'.
tests/cases/compiler/conditionalExpressionNewLine9.ts(5,11): error TS2304: Cannot find name 'g'.


==== tests/cases/compiler/conditionalExpressionNewLine9.ts (7 errors) ====
    var v = a 
            ~
!!! error TS2304: Cannot find name 'a'.
      ? b
        ~
!!! error TS2304: Cannot find name 'b'.
        ? d : e
          ~
!!! error TS2304: Cannot find name 'd'.
              ~
!!! error TS2304: Cannot find name 'e'.
      : c
        ~
!!! error TS2304: Cannot find name 'c'.
        ? f : g;
          ~
!!! error TS2304: Cannot find name 'f'.
              ~
!!! error TS2304: Cannot find name 'g'.